--- a/presentation.css
+++ b/presentation.css
@@ -1,4 +1,4 @@
-﻿/* --- 1. 基礎與導覽列樣式 --- */
+/* --- 1. 基礎與導覽列樣式 --- */
 body {
   width: 100%; 
   max-width: 960px;		
@@ -75,16 +75,9 @@ hr {
   text-decoration: none; 
   color: #0066ff; 
   text-align: right;
-
 }
+
 @media screen and (max-width: 460px) {
-	.tabs label {
-    display: block;      /* 按鈕垂直排列 */
-    width: 100%;
-    margin-right: 0;
-    text-align: center;
-    box-sizing: border-box;
-  }
   nav ul {
     display: flex;
     flex-wrap: wrap;      /* 讓項目在空間不足時自動換行 */
