--- a/teacher.css
+++ b/teacher.css
@@ -28,6 +28,8 @@ nav ul li {
   display: inline;
   margin-right: 10px; 
   padding: 10px;
+  margin-bottom: 30px;
+  line-height: 1.6;
 }
 
 .a-li {
@@ -149,3 +151,4 @@ nav ul li {
 }
 
 hr { border: 0; border-top: 1px solid rgba(0,0,0,0.1); margin: 20px 0; }
+
